# flux

./: .gitignore  pyproject.toml
.sandbox/: eth.js  polka.js
api/core/: settings.py  urls.py  views.py
api/flux/: models.py  urls.py  views.py
api/templates/: index.html
cli/: cli.py
desktop/: package.json
mobile-ionic/: capacitor.config.json  ionic.config.json  package-lock.json  package.json
mobile-ionic/src/components/: Modal.vue  Trending.vue
mobile-ionic/src/views/: Tab1.vue  Tab2.vue  Tab3.vue  Tabs.vue
web/: package.json
web/public/: index.html  manifest.json
web/src/: App.tsx  LandingPage.tsx
web/src/components/: Crypto.tsx  CryptoDetail.tsx  Exchanges.tsx  Homepage.tsx  Navbar.tsx  News.tsx  index.js
